=== HEAD

* Using a memory database with SQLite now defaults to a single connection, so all queries it uses run against the same database (jeremyevans)

* Fix attempting to query MySQL using the same connection being used to concurrently execute another query (jeremyevans)

* Add options to the connection pool to configure reusing connections and converting exceptions (jeremyevans)

* Use the database driver provided string quoting methods for MySQL and SQLite (jeremyevans) (#223)

* Add ColumnAll#==, for checking the equality of two ColumnAlls (jeremyevans)

* Allow an array of arrays instead of a hash when specifying conditions (jeremyevans)

* Add Sequel::DBI::Database#lowercase, for lowercasing column names (jamesearl)

* Remove Dataset#extend_with_destroy, which may break code that uses Dataset#set_model directly and expects the destroy method to be added (jeremyevans)

* Fix some issues when running on Ruby 1.9 (Zverok, jeremyevans)

* Make the DBI adapter work (partially) with PostgreSQL (Seb)

=== 1.5.1 (2008-04-30)

* Have Dataset#graph give a nil value instead of a hash with all nil values if no matching rows exist in the graphed table (jeremyevans)

=== 1.5.0 (2008-04-29)

* Set a timeout in the Sqlite adapter, default to 5 seconds (hrvoje.marjanovic) (#218)

* Document that calling Sequel::ODBC::Database#execute manually requires you to manually drop the returned object (jeremyevans) (#217)

* Paginating an already paginated/limited dataset now raises an error (jeremyevans)

* Add support for PostgreSQL partial indexes (dlee)

* Added support for arbitrary index types (including spatial indexes) (dlee)

* Quote column names in SQL generated for SQLite (tmm1)

* Deprecate Object#rollback! (jeremyevans)

* Make some Dataset methods private (qualified_column_name, column_list, table_ref, source_list) (jeremyevans)

* Deprecate Dataset methods #set_options, #set_row_proc, #remove_row_proc, and #clone_merge (jeremyevans)
